--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="main-container">
     <div class="card">
-      <img src="./images/image-qr-code.png" alt="qr code">
+      <img class="qr-code" src="./images/image-qr-code.png" alt="qr code">
       <p class="card-title">Improve your front-end skills by building projects</p>
       <p class="card-description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>    
